updated manuscript up to arousal. A mod to renv.lock added ggpubr package

--- a/manuscript/_figure2.html
+++ b/manuscript/_figure2.html
@@ -62,14 +62,21 @@ Loading the 'metafor' package (version 4.6-0). For an
 introduction to the package please type: help(metafor)</code></pre>
 </div>
 <div class="cell-output cell-output-stderr">
+<pre><code>Registered S3 method overwritten by 'netmeta':
+  method          from
+  subset.pairwise meta</code></pre>
+</div>
+<div class="cell-output cell-output-stderr">
+<pre><code>Warning: replacing previous import 'meta::pairwise' by 'netmeta::pairwise' when
+loading 'dmetar'</code></pre>
+</div>
+<div class="cell-output cell-output-stderr">
 <pre><code>Extensive documentation for the dmetar package can be found at: 
  www.bookdown.org/MathiasHarrer/Doing_Meta_Analysis_in_R/</code></pre>
 </div>
 <div class="cell-output cell-output-stderr">
-<pre><code>Loading 'meta' package (version 7.0-0).
-Type 'help(meta)' for a brief overview.
-Readers of 'Meta-Analysis with R (Use R!)' should install
-older version of 'meta' package: https://tinyurl.com/dt4y5drs</code></pre>
+<pre><code>Loading 'meta' package (version 8.0-1).
+Type 'help(meta)' for a brief overview.</code></pre>
 </div>
 <div class="cell-output cell-output-stderr">
 <pre><code>Loading required package: grid</code></pre>
@@ -85,14 +92,14 @@ older version of 'meta' package: https://tinyurl.com/dt4y5drs</code></pre>
 (`geom_line()`).</code></pre>
 </div>
 <div class="cell-output cell-output-stderr">
-<pre><code>Warning: Removed 750 rows containing missing values or values outside the scale range
+<pre><code>Warning: Removed 753 rows containing missing values or values outside the scale range
 (`geom_line()`).</code></pre>
 </div>
 <div class="cell-output-display">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
 <p><img src="_figure2_files/figure-html/fig2-1.png" class="img-fluid figure-img" width="1536"></p>
-<figcaption>Forest and funnel plots of valence predictions from the MER models.</figcaption>
+<figcaption>Forest (A) and funnel (B) plots of the best valence models from all MER studies.</figcaption>
 </figure>
 </div>
 </div>
